Deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-assistant-service
  labels:
    app: health-assistant
spec:
  type: ClusterIP
  selector:
    app: health-assistant
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
